<resources>
    <string name="app_name">SparkleHaven</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="product_description">This elegant 18 Karat Gold Ring splendid shinning and smooth surface in a floral design with a simple, shinny and plane surface. </string>
    <string name="privacy_policy_description">We want you to know exactly how SparkleHaven services works and why we need your details. Reviewing our policy will help you continue using the app with peace of mind.</string>
    <string name="privacy_policy_answer1">In SparkleHaven, we are committed to protecting your privacy. To provide a personalized and efficient experience, we collect several types of information about you.\nThis includes:\n\n. Personal Information: When you create an account, we collect personal details such as your name, email address, phone number, and postal address. This helps us identify you and provide a more tailored experience.\n

. Profile Information: We collect additional information that you provide in your profile, such as your birthdate, preferences, and interests. This information is used to enhance your experience and recommend products and content that suit your preferences.\n

. Usage Information: We collect data about your interactions with the app, such as the features you use, the content you view, and the products you add to your cart or purchase. This information helps us understand how you use our app and improve our services.\n

. Device Information: We collect information about the device you use to access SparkleHaven, including your device type, operating system, unique device identifiers, and mobile network information. This helps us optimize the app for different devices and troubleshoot issues.\n

. Location Information: With your permission, we collect location data from your device. This helps us provide location-based services, such as showing you nearby stores or relevant offers.\n

. Payment Information: If you make a purchase through SparkleHaven, we collect payment information, such as your credit card details or other payment methods. This information is securely processed by our payment partners and is not stored on our servers.\n

. Communication Information: We collect information from your communications with us, including emails, messages, and feedback. This helps us respond to your inquiries and improve our customer service.\n\n
        We use this collected information to provide, maintain, and improve our services, personalize your experience, communicate with you, and ensure the security of our app. We are committed to using this information responsibly and transparently.\n\n</string>
    <string name="privacy_policy_answer2">\nAt SparkleHaven, your privacy is paramount, and we use the information we collect about you to enhance and personalize your experience. Here’s a detailed breakdown of how we use your information:\n\n
    . Account Management: We use your personal information to create and manage your account. This includes verifying your identity, ensuring the security of your account, and providing you with access to your profile and order history.\n

.Personalization: We use your profile information, preferences, and usage data to personalize your experience on SparkleHaven. This means recommending products, offers, and content that align with your interests and previous activities.\n

. Order Processing: Your payment and personal information are used to process orders and complete transactions. We ensure that your payment information is securely handled and not stored on our servers.\n

. Communication: We use your contact information to communicate with you about your orders, provide customer support, send important updates, and inform you about new features, promotions, and events. You can manage your communication preferences in your account settings.\n

. Improvement and Development: We analyze your usage data and feedback to understand how you use SparkleHaven. This helps us identify areas for improvement, develop new features, and enhance the overall functionality and user experience of our app.\n

. Security and Fraud Prevention: We use your information to maintain the security of our app, protect against unauthorized access, and prevent fraudulent activities. This includes monitoring for suspicious activity and ensuring compliance with our terms of service.\n

. Legal and Regulatory Compliance: We may use your information to comply with legal obligations, respond to legal requests, and enforce our policies and terms of service.\n

. Advertising and Marketing: With your consent, we may use your information to deliver targeted advertisements and marketing messages based on your preferences and behavior. This helps us provide relevant offers and promotions that you might find interesting.\n\n
    We are committed to using your information in a transparent and responsible manner, always prioritizing your privacy and ensuring that your data is protected.\n\n</string>
    <string name="privacy_policy_answer3">\nAt SparkleHaven, we understand the importance of keeping your information confidential. We disclose your information only to trusted partners and in specific situations where it is necessary to provide our services or comply with legal obligations. Here’s a detailed overview:\n\n
        . Service Providers: We work with third-party service providers to perform various functions on our behalf, such as payment processing, data analysis, email delivery, hosting services, customer service, and marketing assistance. These service providers have access to your information only to perform their tasks and are obligated to protect it.\n

. Business Partners: We may share your information with our business partners for joint marketing initiatives, product collaborations, or co-branded services. These partners are also committed to protecting your privacy.\n

. Legal Compliance: We may disclose your information if required to do so by law or in response to valid requests from public authorities, such as law enforcement agencies. This is to comply with legal obligations, protect our rights, and ensure the safety of our users.\n

. Business Transfers: In the event of a merger, acquisition, reorganization, or sale of all or part of our assets, your information may be transferred as part of the transaction. We will notify you of any such changes and ensure that your information remains protected.\n

. With Your Consent: We may share your information with third parties when we have your explicit consent to do so. This could be for additional services or specific purposes that you agree to.\n

. Analytics and Advertising Partners: We use analytics tools and advertising partners to understand how our app is used and to deliver relevant advertisements. These partners may collect information about your interactions with our app and other online activities to provide insights and targeted advertising.\n\n
    We ensure that any third parties with whom we share your information are bound by confidentiality and data protection agreements, safeguarding your privacy and ensuring that your information is used responsibly.\n\n</string>
    <string name="privacy_policy_answer4">\nAt SparkleHaven, the security of your information is a top priority. We implement a comprehensive range of measures to ensure that your data is protected against unauthorized access, disclosure, alteration, and destruction. Here’s a detailed explanation of how we keep your information secure:\n\n
    . Encryption: We use advanced encryption technologies to protect your data during transmission and storage. This ensures that your information is secure when you interact with our app and when it is stored on our servers.\n

. Access Controls: We have strict access controls in place to ensure that only authorized personnel have access to your information. This includes role-based access, secure authentication mechanisms, and regular audits to monitor access.\n

. Data Minimization: We collect and retain only the information necessary to provide our services. We regularly review our data collection and storage practices to ensure that we do not retain unnecessary data.\n

. Secure Payment Processing: When you make a purchase on SparkleHaven, your payment information is securely processed by trusted third-party payment providers. We do not store your payment information on our servers.\n

. Regular Security Audits: We conduct regular security audits and assessments to identify and address vulnerabilities. This helps us maintain a high level of security and continuously improve our security practices.\n

. User Awareness: We educate our users about security best practices, such as creating strong passwords and being vigilant about phishing attempts. We encourage you to take an active role in protecting your account.\n

. Incident Response: In the event of a security breach, we have a robust incident response plan in place. We will promptly investigate the breach, notify affected users, and take appropriate measures to mitigate the impact.\n

. Compliance with Regulations: We comply with relevant data protection regulations and industry standards to ensure that your information is handled securely. This includes adherence to the General Data Protection Regulation (GDPR), Pakistan Consumer Privacy Act (PCPA), and other applicable laws.\n\n
    By implementing these comprehensive security measures, we strive to protect your information and ensure that your privacy is safeguarded.\n\n</string>
    <string name="privacy_policy_answer5">\nAt SparkleHaven, we believe in empowering you to manage your information. We provide several tools and options to help you control your data and ensure that it is accurate and up-to-date. Here’s a detailed explanation of how you can manage your information:\n\n
    . Data Deletion: You have the right to request the deletion of your personal information. You can initiate this process through your account settings or by contacting our support team. Please note that we may retain certain information to comply with legal obligations or for legitimate business purposes.\n

. Communication Preferences: You can manage your communication preferences in your account settings. This includes opting out of marketing communications, adjusting notification settings, and managing your subscription to newsletters.\n

. Cookie Settings: You can manage your cookie preferences through your browser settings. This includes disabling cookies, deleting stored cookies, and setting preferences for how cookies are used. Please note that disabling cookies may impact your experience on our app.\n
        . Third-Party Services: If you have connected your SparkleHaven account with third-party services, you can manage these connections through your account settings. This includes revoking access and managing permissions.</string>
    <string name="cart">Cart</string>
    <string name="add_a_coupon">Add a Coupon</string>
    <string name="subtotal">Subtotal:</string>
    <string name="zero">0</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="postal_code">Postal Code</string>
    <string name="new_shipping_details">New Shipping Details</string>
    <string name="add_new_shipping_details">Add New Shipping Details</string>
    <string name="later_select_and_use_shipping_address">You can later select and use this address for shipping</string>
    <string name="save">Save</string>
    <string name="all_accessory">All Accessory</string>
    <string name="products">Products</string>
    <string name="your_shipping_address">Your Shipping Address</string>
    <string name="no_address_found">No Address Found</string>
    <string name="add_address">Add Address</string>
</resources>