<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    style="@style/MainBackgroundStyle"
    tools:context=".dashboard.navigation_fragments.profile.activities.ShippingDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:background="@drawable/black_fill_circle_shape"
                style="@style/OnBackIconStyle">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/back64" />

            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/new_shipping_details"
                style="@style/HeadingTextStyle" />

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/add_new_shipping_details"
                android:textSize="21sp"
                style="@style/HeadingTextStyle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/username"
                style="@style/SubHeadingTextStyle" />

            <EditText
                android:id="@+id/usernameEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                style="@style/EditTextStyle"
                android:inputType="textPersonName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/email"
                style="@style/SubHeadingTextStyle" />

            <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                style="@style/EditTextStyle"
                android:inputType="textEmailAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/phone_number"
                style="@style/SubHeadingTextStyle" />

            <EditText
                android:id="@+id/phoneNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                style="@style/EditTextStyle"
                android:inputType="phone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/address"
                style="@style/SubHeadingTextStyle" />

            <EditText
                android:id="@+id/deliveryAddressEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                style="@style/EditTextStyle"
                android:inputType="textPassword" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:text="@string/postal_code"
                style="@style/SubHeadingTextStyle" />

            <EditText
                android:id="@+id/postalCodeEditText"
                android:layout_width="match_parent"
                android:layout_height="46dp"
                style="@style/EditTextStyle"
                android:imeOptions="actionDone"
                android:inputType="textPostalAddress" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/later_select_and_use_shipping_address"
                style="@style/DescriptionTextStyle"
                android:layout_marginTop="24dp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/black_btn_shape"
                android:fontFamily="@font/cinzel_medium"
                android:text="@string/save"
                style="@style/RoundedButtonStyle"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>