<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    style="@style/AppbarStyle"
    tools:context=".dashboard.navigation_fragments.profile.fragments.ShippingDetailBottomSheetFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_shipping_address"
            android:textSize="21sp"
            style="@style/HeadingTextStyle"
            android:layout_marginTop="10dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/shippingAddressRecView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:layout_marginTop="16dp"/>

        <TextView
            android:id="@+id/noAddressText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_address_found"
            android:textSize="16sp"
            android:visibility="gone"
            style="@style/HeadingTextStyle"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="6dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/addNewShippingBtn"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            app:cardElevation="4dp"
            style="@style/CardViewStyle2"
            android:layout_margin="12dp"
            app:cardCornerRadius="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    style="@style/OutlinedRoundedButtonStyle"
                    android:gravity="center"
                    android:padding="5dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/plus32" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_address"
                    android:layout_marginStart="12dp"
                    android:textSize="18sp"
                    style="@style/SubHeadingTextStyle"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>